[package]
name = "xfitness-bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["unstable-locales"] }
image = "0.24.7"
log = "0.4.20"
plotters = "0.3.5"
pretty_env_logger = "0.5.0"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
teloxide = { version = "0.12.2", features = ["macros"] }
teloxide-core = { version = "0.9.1", features = ["throttle"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
